--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -521,7 +521,7 @@
 
 - title: 'Generative Text Prompts for Image Aesthetic Quality Assessment'
   #date:  'Sept. 2018'
-  imgurl: '/images/projects/2024/shi2024generative.png'
+  imgurl: '/images/projects/2024/shi2024generative.jpg'
   selected: false
   authors:
     - name: Ju Shi
