--- a/_data/patents.yml
+++ b/_data/patents.yml
@@ -1,4 +1,6 @@
 - normal:
+    content:  "<strong>2025:</strong> <strong>A Method and Device of Micro-Expression Recognition Based on Multi-Task Learning and Global Circular Convolution</strong>, <i>The First Inventor</i>, ZL202211618464.X"    
+- normal:
     content:  "<strong>2025:</strong> <strong>A Method and Device of Facial Action Unit Transfer Based on Deformable Autoencoder and Disentanglement Swap</strong>, <i>The First Inventor</i>, ZL202210444149.3"    
 - normal:
     content:  "<strong>2025:</strong> <strong>A Method and Device of Scoliosis Recognition Based on Symmetric Perception on Natural Image</strong>, <i>The First Inventor</i>, ZL202410850833.0"
