--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -66,7 +66,7 @@
       url:  false
     - name: Rui Chen
       url:  false
-    - name: <strong>Zhiwen Shao</strong>
+    - name: <strong>Zhiwen Shao*</strong>
       url:  'https://zhiwenshao.github.io/'
   publisher:  'Visual Informatics (VISINF), 2025'
   status:   '(JCR Q1)'
