--- a/_data/patents.yml
+++ b/_data/patents.yml
@@ -1,4 +1,6 @@
 - normal:
+    content:  "<strong>2025:</strong> <strong>A Method and Device of Face Recognition Based on Depthwise Separable Convolution and Additive Angular Margin Loss</strong>, <i>The Fifth Inventor</i>, ZL202210942319.0"
+- normal:
     content:  "<strong>2025:</strong> <strong>A Method and Device of Micro-Expression Recognition Based on Multi-Task Learning and Global Circular Convolution</strong>, <i>The First Inventor</i>, ZL202211618464.X"    
 - normal:
     content:  "<strong>2025:</strong> <strong>A Method and Device of Facial Action Unit Transfer Based on Deformable Autoencoder and Disentanglement Swap</strong>, <i>The First Inventor</i>, ZL202210444149.3"    
