--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,4 +1,6 @@
 - normal:
+    content:  "<strong>2025:</strong> <strong>Xuzhou Science and Technology Planning Project</strong>, <i>Principal Investigator</i>"
+- normal:
     content:  "<strong>2024:</strong> <strong>Young Academic Leader Program of the China University of Mining and Technology</strong>, <i>Principal Investigator</i>"
 - normal:
     content:  "<strong>2024:</strong> <strong>General Project of the National Natural Science Foundation of China</strong>, <i>Principal Investigator</i>"
