--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,5 +1,5 @@
 - normal:
-    content:  "<strong>2025:</strong> <strong>Xuzhou Science and Technology Planning Project</strong>, <i>Principal Investigator</i>"
+    content:  "<strong>2025:</strong> <strong>Research on Sustainable Development and Social Welfare of Xuzhou Science and Technology Planning Project</strong>, <i>Principal Investigator</i>"
 - normal:
     content:  "<strong>2024:</strong> <strong>Young Academic Leader Program of the China University of Mining and Technology</strong>, <i>Principal Investigator</i>"
 - normal:
