--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,4 +1,6 @@
 - normal:
+    content:  "<strong>Dec. 2025:</strong> Our paper <strong>Spatio-Temporal Disentanglement and Constrained Self-Attention for Multi-Modal Deception Detection</strong> is accepted by <i>ACM TOMM</i>."
+- normal:
     content:  "<strong>Oct. 2025:</strong> Our paper <strong>CurvNet: Latent Contour Representation and Iterative Data Engine for Curvature Angle Estimation</strong> is accepted by <i>Pattern Recognition</i>."
 - normal:
     content:  "<strong>Sept. 2025:</strong> Our paper <strong>Micro-Expression Recognition via Fine-Grained Dynamic Perception</strong> is accepted by <i>ACM TOMM</i>."
