--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,3 +1,34 @@
+- title: 'Spatio-Temporal Disentanglement and Constrained Self-Attention for Multi-Modal Deception Detection'
+  #date:  'Jul. 2018'
+  imgurl: '/images/projects/2025/shao2025spatio.png'
+  selected: true
+  authors:
+    - name: <strong>Zhiwen Shao</strong>
+      url:  'https://zhiwenshao.github.io/'
+    - name: Hang Yang
+      url:  false
+    - name: Hancheng Zhu
+      url:  'https://zhuhancheng.github.io/'
+    - name: Rui Yao
+      url:  'https://ruiyao.bitbucket.io/'
+    - name: Lixin Zou
+      url:  'https://www.zoulixin.site/'
+    - name: Mengtian Li
+      url:  'https://mengtianli.github.io/'
+    - name: Bin Sheng
+      url:  'https://www.cs.sjtu.edu.cn/jiaoshiml/shengbin.html'   
+  publisher:  'ACM TOMM, 2025'
+  status:   '(CCF B)'
+  #place:   'in Ottawa, Canada'
+  desc: 'We propose a Spatio-Temporal Representation Disentanglement (STRD) framework for multi-modal deception detection, which uses a dual-encoder structure to learn spatial and temporal representations for each modality. Specifically, we introduce a pre-trained foundation model to act as the spatial encoder and design a lightweight network as the temporal encoder, extracting spatial semantics and capturing dynamic temporal patterns. Then, we propose a Constrained Self-Attention Block (CSAB), in which self-attention distribution of each head is regarded as spatial distribution and is constrained to attend a certain facial local region. Furthermore, we present a Cross-modal Correlation Fusion Block (CCFB) to achieve temporal synchronization across modalities by measuring the correlations between visual and audio features.'
+  tags:
+    #- name: 'arXiv'
+    # url:  'https://arxiv.org/abs/2509.06015'
+    #- name: 'site'
+    #  url:  'https://dl.acm.org/doi/10.1145/3765901'
+    #- name: 'code'
+    #  url:  'https://github.com/CYF-cuber/FDP'
+      
 - title: 'CurvNet: Latent Contour Representation and Iterative Data Engine for Curvature Angle Estimation'
   #date:  'Jul. 2018'
   imgurl: '/images/projects/2025/shao2025curvnet.png'
