--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,3 +1,30 @@
+- title: 'MOA: Efficient Scene-Aware Multi-object Arrangement in VR'
+  #date:  'Jul. 2018'
+  imgurl: '/images/projects/2025/shi2025moa.png'
+  selected: true
+  authors:
+    - name: Xuehuai Shi
+      url:  false
+    - name: Yuhan Duan
+      url:  false
+    - name: Ziteng Wang
+      url:  false
+    - name: Jian Wu
+      url:  false
+    - name: <strong>Zhiwen Shao</strong>
+      url:  'https://zhiwenshao.github.io/'
+    - name: Jieming Yin
+      url:  false
+    - name: Lili Wang
+      url:  'https://liliwang.net/'      
+  publisher:  'IEEE Transactions on Visualization and Computer Graphics (TVCG), 2025'
+  status:   '(CCF A)'
+  #place:   'in Ottawa, Canada'
+  desc: 'We propose an efficient, scene-aware multi-object arrangement method (MOA) designed for fast, precise, and convenient object arrangement. First, MOA introduces an importance-driven multi-object initial selection algorithm that assigns higher spatiotemporally correlated object importance (IMP) to target objects, establishing a natural multi-object initial selection mode that enables quick and accurate selection of high-IMP objects. Subsequently, it presents an auxiliary-structure-guided multi-object manipulation algorithm that constructs an auxiliary manipulation structure to assist subsequent multi-object manipulation, alongside a multi-modal interaction mode that facilitates swift and natural manipulation.'
+tags:
+    - name: 'site'
+      url:  'https://ieeexplore.ieee.org/document/11267119'
+      
 - title: 'Spatio-Temporal Disentanglement and Constrained Self-Attention for Multi-Modal Deception Detection'
   #date:  'Jul. 2018'
   imgurl: '/images/projects/2025/shao2025spatio.png'
@@ -546,6 +573,29 @@
       url:  'https://doi.org/10.1016/j.aej.2024.10.066'
     - name: 'code'
       url:  'https://github.com/RuiChen-stack/MGScoliosis'
+
+- title: 'Scene-Aware Foveated Neural Radiance Fields'
+  #date:  'Jul. 2018'
+  imgurl: '/images/projects/2024/shi2024scene.png'
+  selected: true
+  authors:
+    - name: Xuehuai Shi
+      url:  false
+    - name: Lili Wang
+      url:  'https://liliwang.net/'      
+    - name: Xinda Liu
+      url:  false
+    - name: Jian Wu
+      url:  false
+    - name: <strong>Zhiwen Shao</strong>
+      url:  'https://zhiwenshao.github.io/'
+  publisher:  'IEEE Transactions on Visualization and Computer Graphics (TVCG), 2025'
+  status:   '(CCF A)'
+  #place:   'in Ottawa, Canada'
+  desc: 'We propose a scene-aware foveated neural radiance fields method to synthesize high-quality foveated images in complex VR scenes at high frame rates. Firstly, we construct a multi-ellipsoidal neural representation to enhance the neural radiance fields representation capability in salient regions of complex VR scenes based on the scene content. Then, we introduce a uniform sampling based foveated neural radiance fields framework to improve the foveated image synthesis performance with one-pass color inference, and improve the synthesis quality by leveraging the foveated scene-aware objective function.'
+  tags:
+    - name: 'site'
+      url:  'https://ieeexplore.ieee.org/document/10599866'      
       
 - title: 'High-Level LoRA and Hierarchical Fusion for Enhanced Micro-Expression Recognition'
   #date:  'Jul. 2018'
@@ -710,29 +760,6 @@
   tags:  
     - name: 'site'
       url:  'https://www.ejournal.org.cn/EN/10.12263/DZXB.20240279'      
-
-- title: 'Scene-Aware Foveated Neural Radiance Fields'
-  #date:  'Jul. 2018'
-  imgurl: '/images/projects/2024/shi2024scene.png'
-  selected: true
-  authors:
-    - name: Xuehuai Shi
-      url:  false
-    - name: Lili Wang
-      url:  'https://liliwang.net/'      
-    - name: Xinda Liu
-      url:  false
-    - name: Jian Wu
-      url:  false
-    - name: <strong>Zhiwen Shao</strong>
-      url:  'https://zhiwenshao.github.io/'
-  publisher:  'IEEE Transactions on Visualization and Computer Graphics (TVCG), 2024'
-  status:   '(CCF A)'
-  #place:   'in Ottawa, Canada'
-  desc: 'In this paper, we propose a scene-aware foveated neural radiance fields method to synthesize high-quality foveated images in complex VR scenes at high frame rates. Firstly, we construct a multi-ellipsoidal neural representation to enhance the neural radiance fields representation capability in salient regions of complex VR scenes based on the scene content. Then, we introduce a uniform sampling based foveated neural radiance fields framework to improve the foveated image synthesis performance with one-pass color inference, and improve the synthesis quality by leveraging the foveated scene-aware objective function.'
-  tags:
-    - name: 'site'
-      url:  'https://ieeexplore.ieee.org/document/10599866'
       
 - title: 'Joint Facial Action Unit Recognition and Self-Supervised Optical Flow Estimation'
   #date:  'Jul. 2018'
