--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -678,7 +678,7 @@
 
 - title: 'Small Object Detection in Drone Images via Foreground Refinement and Multidimensional Inductive Bias'
   #date:  'Jul. 2018'
-  imgurl: '/images/projects/2025/feng2025small.png'
+  imgurl: '/images/projects/2025/feng2025small.jpg'
   selected: false
   authors:
     - name: Qihan Feng
