--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -5,6 +5,8 @@
 - normal:
     content:  "<strong>2024:</strong> <strong>General Project of the National Natural Science Foundation of China</strong>, <i>Principal Investigator</i>"
 - normal:
+    content:  "<strong>2024:</strong> <strong>Enterprise Project for Processing and Analysis of Rehabilitation Medicine Data</strong>, <i>Principal Investigator</i>"    
+- normal:
     content:  "<strong>2023:</strong> <strong>Hong Kong Scholars Program</strong>, <i>Principal Investigator</i>"
 - normal:
     content:  "<strong>2023:</strong> <strong>Enterprise Project for Anti-Drowning Safety Management System in Swimming Venue Based on AI and Big Data Analysis</strong>, <i>Principal Investigator</i>"
