--- a/_data/experiences.yml
+++ b/_data/experiences.yml
@@ -3,7 +3,7 @@
   desc:  "Interdisciplinary Fields of Computer Vision"
   host:  false
   brief: true
-- date:  "Jan. 2024 -"
+- date:  "Jan. 2024 - Dec. 2025"
   title: "Postdoctoral Fellow @ HKUST"
   desc:  "Vision Based Weather Forecasting"
   host:
