--- a/_data/experiences.yml
+++ b/_data/experiences.yml
@@ -1,4 +1,9 @@
-- date:  "Jan. 2023 -"
+- date:  "Jan. 2026 -"
+  title: "Professor @ CUMT"
+  desc:  "Interdisciplinary Fields of Computer Vision"
+  host:  false
+  brief: true
+- date:  "Jan. 2023 - Dec. 2025"
   title: "Tenured Associate Professor @ CUMT"
   desc:  "Interdisciplinary Fields of Computer Vision"
   host:  false
