--- a/_data/experiences.yml
+++ b/_data/experiences.yml
@@ -28,7 +28,7 @@
   host:  false
   brief: true
 - date:  "Nov. 2017 - Nov. 2018 "
-  title: "Research Assistant @ NTU"
+  title: "Joint Ph.D. student @ NTU"
   desc:  "Joint Facial Action Unit Recognition and Face Alignment"
   host:
     name:  "<a href='https://research.monash.edu/en/persons/jianfei-cai/'>Prof. Jianfei Cai</a>"
