--- a/_data/services.yml
+++ b/_data/services.yml
@@ -1,5 +1,5 @@
 - normal:
-    content:  "<strong>Area Chair:</strong> <strong>ACM International Conference on Multimedia (MM) 2024</strong>"
+    content:  "<strong>Area Chair:</strong> <strong>ACM International Conference on Multimedia (MM) 2024, 2025</strong>"
 - normal:
     content:  "<strong>Associate Editor:</strong> <strong>The Visual Computer (TVC)</strong>"
 - normal:
